# walkietalkie

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_OLD.md  commander.ron  soldier.err  soldier.ron
commander/: Cargo.toml  config.ron
commander/src/: main.rs
diagrams/: use-cases.drawio
examples/: commander.rs  soldier.rs
examples/commander/: config.ron  main.rs
examples/soldier/: config.ron  main.rs
soldier/: Cargo.toml  config.ron
soldier/src/: main.rs
src/: boss.rs  commander.rs  communication.rs  config.rs  devices.rs  lib.rs  main.rs  radio.rs  report.rs  reporter.rs  seal.rs  soldier.rs  thread_pool.rs
src/commander/: command.rs  commander_config.rs
src/reporter/: report.rs
src/soldier/: report.rs  soldier_config.rs
