[package]
name = "walkietalkie"
version = "0.1.0"
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"]}
bincode = "1.3.1"
ron = "0.6.4"
log = "0.4.11"
simple_logger = "1.11.0"
