[package]
name = "walkietalkie"
description = "Walkietalkie is a simple remote command runner."
keywords = ["linux", "client", "server", "connection", "command",]
version = "0.1.0"
authors = ["Henry Barreto <me@henrybarreto.dev>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.1"
ron = "0.8.0"
log = "0.4.11"
simple_logger = "4.0.0"
rand = "0.8.4"
clap = "4.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
