[package]
name = "commander"
description = "walkietalkie client what send Command and receive Report back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
simple_logger = "1.13.0"
walkietalkie = { path = "../"}