[package]
name = "soldier"
description = "walkietalkie server what execute commands and send output back to Commander client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
log = "0.4.14"
simple_logger = "1.13.0"
walkietalkie = {path = ".."}